--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,10 @@
     "angular-sanitize": "1.2.16",
     "angular-ui-router": "~0.2.10",
     "angular-bootstrap": "~0.11.0",
-    "angular-ui-select2": "~0.0.5",
-    "angular-ui-tree": "~2.1.5",
     "bootstrap-sass-official": "~3.2.0",
     "d3": "~3.4.11",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "font-awesome": "~4.2.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
