--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "bootstrap-sass-official": "~3.2.0",
     "d3": "~3.4.11",
     "underscore": "~1.6.0",
-    "angular-route": "~1.2.25"
+    "angular-route": "~1.2.25",
+    "select2": "~3.5.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
